--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vuary?serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.username=kotitonttu
 
-spring.datasource.password=sasha
+spring.datasource.password=Eq13034513!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.main.allow-circular-references=true
 
