--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,17 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.4.2.Final</version> <!-- Версия может быть другой -->
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>1.4.2.Final</version> <!-- Версия должна совпадать с версией mapstruct -->
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
