--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,8 +34,9 @@ application.security.jwt.expiration=900000
 application.security.jwt.cookie-name=jwt-cookie
 application.security.jwt.refresh-token.expiration=1296000000
 application.security.jwt.refresh-token.cookie-name=refresh-jwt-cookie
-
+#storage.service.folder.path = C:/Users/Admin/Desktop/
 storage.service.folder.path = /var/www/vuary/user_folder/
 storage.type.service.folder.path = /var/www/vuary/types/
+#storage.passport.service.path = /var/www/vuary/Инструкции и коды ошибок/
 swagger.url.path = http://31.129.102.70:8080
 #swagger.url.path = http://localhost:8080
