--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,4 @@ storage.type.service.folder.path = /var/www/vuary/types/
 #storage.passport.service.path = /var/www/vuary/Инструкции и коды ошибок/
 swagger.url.path = http://31.129.102.70:8080
 #swagger.url.path = http://localhost:8080
+server.tomcat.uri-encoding=UTF-8
