--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,6 @@ storage.type.service.folder.path = /var/www/vuary/types/
 swagger.url.path = http://31.129.102.70:8080
 #swagger.url.path = http://localhost:8080
 server.tomcat.uri-encoding=UTF-8
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
