--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vuary?serverTimezone=Europe/Moscow
 
 #spring.datasource.username=root
-#spring.datasource.password=sasha
+#spring.datasource.password=611EternitySQL1965694
 spring.datasource.username=kotitonttu
 spring.datasource.password=Eq13034513!
 
