--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vuary?serverTimezone=Europe/Mo
 
 #spring.datasource.username=root
 #spring.datasource.password=611EternitySQL1965694
-spring.datasource.username=root
-spring.datasource.password=sasha
+spring.datasource.username=kotitonttu
+spring.datasource.password=Eq13034513!
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
