--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vuary?serverTimezone=Europe/Moscow
+spring.datasource.url=jdbc:mysql://mysql-container:3306/vuary?serverTimezone=Europe/Moscow
 
+spring.datasource.username=root
+spring.datasource.password=611EternitySQL1965694
 #spring.datasource.username=root
-#spring.datasource.password=611EternitySQL1965694
-spring.datasource.username=kotitonttu
-spring.datasource.password=Eq13034513!
+#spring.datasource.password=sasha
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -34,12 +34,6 @@ application.security.jwt.expiration=900000
 application.security.jwt.cookie-name=jwt-cookie
 application.security.jwt.refresh-token.expiration=1296000000
 application.security.jwt.refresh-token.cookie-name=refresh-jwt-cookie
-#storage.service.folder.path = C:/Users/Admin/Desktop/
-storage.service.folder.path = /var/www/vuary/user_folder/
-storage.type.service.folder.path = /var/www/vuary/types/
-#storage.passport.service.path = /var/www/vuary/Инструкции и коды ошибок/
-swagger.url.path = http://31.129.102.70:8080
-#swagger.url.path = http://localhost:8080
 server.tomcat.uri-encoding=UTF-8
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
