--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://mysql-container:3306/vuary?serverTimezone=Europe/Moscow
 
-spring.datasource.username=root
-spring.datasource.password=611EternitySQL1965694
+spring.datasource.username=kotitonttu
+spring.datasource.password=Eq13034513!
 #spring.datasource.username=root
 #spring.datasource.password=sasha
 
