--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - /var/www:/app/uploads  # Монтирование директории с файлами
+      - /var/www:/app  # Монтирование директории с файлами
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/vuary?serverTimezone=Europe/Moscow
       SPRING_DATASOURCE_USERNAME: kotitonttu
