--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,50 @@
 services:
-  app:
-    build: .
+  backend:
+    build:
+      context: .  # Путь указывает на текущую папку, где лежит бекенд
+      dockerfile: Dockerfile
+    container_name: kotitonttu_backend
+    image: kotitonttu-backend
     ports:
       - "8080:8080"
     volumes:
-      - /var/www:/app/uploads  # Монтирование директории с файлами
+      - /var/www:/app/uploads
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/vuary?serverTimezone=Europe/Moscow
       SPRING_DATASOURCE_USERNAME: kotitonttu
       SPRING_DATASOURCE_PASSWORD: Eq13034513!
-      SPRING_JPA_HIBERNATE_DDL_AUTO: create-drop
-      # Остальные переменные (SMTP, JWT и т.д.) можно добавить здесь
     depends_on:
       - db
+    restart: unless-stopped
+
+  frontend:
+    build:
+      context: ../kotitonttu_fe  # Указывает на фронтенд в родительской папке
+      dockerfile: Dockerfile
+    container_name: kotitonttu_frontend
+    image: kotitonttu-frontend
+    ports:
+      - "3000:3000"
+    environment:
+      REACT_APP_API_URL: "http://31.129.102.70:8080"
+    depends_on:
+      - backend
+    restart: unless-stopped
 
   db:
     image: mysql:8.0
+    container_name: kotitonttu_db
+    restart: always
     environment:
       MYSQL_DATABASE: vuary
       MYSQL_USER: kotitonttu
       MYSQL_PASSWORD: Eq13034513!
-      MYSQL_ROOT_PASSWORD: adminQq13037613! # Пароль для root-пользователя
+      MYSQL_ROOT_PASSWORD: adminQq13037613!
+    ports:
+      - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
       - ./logs:/app/logs
-    ports:
-      - "3306:3306"
     command: --default-authentication-plugin=mysql_native_password
-
 volumes:
-  mysql_data:
+  db_data:
